working on pagination

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <main>
             <section class="margin">
               <section id="article-list" class="row">
-                <article id="feature-article">
+                <article id="feature-article" class="article-post">
                   <div>
                     <a href="article-page.html">
                       <div id="feature-img">
@@ -47,7 +47,7 @@
                     </a>
                   </div>
                 </article>
-                <article class="sub-article">
+                <article class="article-post sub-article">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -61,7 +61,7 @@
                     </a>
                   </div>
                 </article>
-                <article class="sub-article">
+                <article class="article-post sub-article">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -75,7 +75,7 @@
                     </a>
                   </div>
                 </article>
-                <article class="sub-article">
+                <article class="article-post sub-article">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -89,7 +89,7 @@
                     </a>
                   </div>
                 </article>
-                <article class="sub-article">
+                <article class="article-post sub-article">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -103,7 +103,7 @@
                     </a>
                   </div>
                 </article>
-                <article class="sub-article">
+                <article class="article-post sub-article">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -117,7 +117,21 @@
                     </a>
                   </div>
                 </article>
-                <article class="sub-article">
+                <article class="article-post sub-article hello">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article hello">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -133,18 +147,16 @@
                 </article>
                 </section>
                 <section class="main-pagination">
-                  <nav aria-label="Page navigation example">
+                  <nav aria-label="Page navigation">
                     <ul class="pagination">
                       <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Previous">
+                        <a class="page-link page-prev pag-disabled" href="#" aria-label="Previous">
                           <span aria-hidden="true">&laquo;</span>
                         </a>
                       </li>
-                      <li class="page-item"><a class="page-link" href="#">1</a></li>
-                      <li class="page-item"><a class="page-link" href="#">2</a></li>
-                      <li class="page-item"><a class="page-link" href="#">3</a></li>
+                      <li class="page-item current-page"><p class="page-number"></p></li>
                       <li class="page-item">
-                        <a class="page-link" href="#" aria-label="Next">
+                        <a class="page-link page-next" href="#" aria-label="Next">
                           <span aria-hidden="true">&raquo;</span>
                         </a>
                       </li>
