--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     </a>
                   </div>
                 </article>
-                <article class="article-post sub-article hello">
+                <article class="article-post sub-article ">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -131,7 +131,245 @@
                     </a>
                   </div>
                 </article>
-                <article class="article-post sub-article hello">
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
+                  <div class="article-content">
+                    <a href="article-page.html">
+                      <div class="article-img">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      </div>
+                      <div class="article-text">
+                        <h3>This is where the title will go</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore beatae voluptas quae modi mollitia. Quasi provident beatae, nisi ea repellendus, quam assumenda adipisci est voluptas nesciunt voluptatem ad dolorum ab!</p>
+                        <p>Catagory | 00-00-0000</p>
+                      </div>
+                    </a>
+                  </div>
+                </article>
+                <article class="article-post sub-article ">
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
@@ -150,15 +388,15 @@
                   <nav aria-label="Page navigation">
                     <ul class="pagination">
                       <li class="page-item">
-                        <a class="page-link page-prev pag-disabled" href="#" aria-label="Previous">
+                        <button class="page-link page-prev" aria-label="Previous">
                           <span aria-hidden="true">&laquo;</span>
-                        </a>
+                        </button>
                       </li>
                       <li class="page-item current-page"><p class="page-number"></p></li>
                       <li class="page-item">
-                        <a class="page-link page-next" href="#" aria-label="Next">
+                        <button class="page-link page-next" aria-label="Next">
                           <span aria-hidden="true">&raquo;</span>
-                        </a>
+                        </button>
                       </li>
                     </ul>
                   </nav>
