minified the css and js

--- a/article-page.html
+++ b/article-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Space Blog | Blog Post</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
         </nav>
         <header class="article-post-header">
           <div class="post-feature-img">
-              <img class="img-fluid" src="images/universe-4609408_1280.jpg" alt="">
+              <img class="img-fluid" src="images/universe-4609408_1280.jpg" alt="Post Feature Image">
           </div>
         </header>
         <div class="container-fluid main-container">
@@ -48,7 +48,7 @@
                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis facilis repudiandae impedit molestiae repellat adipisci, perferendis corrupti beatae labore minima dolorem aperiam cupiditate asperiores deserunt temporibus nemo architecto. Earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis facilis repudiandae impedit molestiae repellat adipisci, perferendis corrupti beatae labore minima dolorem aperiam cupiditate asperiores deserunt temporibus nemo architecto. Earum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur veritatis facilis repudiandae impedit molestiae repellat adipisci, perferendis corrupti beatae labore minima dolorem aperiam cupiditate asperiores deserunt temporibus nemo architecto. Earum?</p>
                   <div class="post-content-img">
                     <figure>
-                      <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                      <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Nebula galaxy by John Doe">
                       <figcaption class="figure-caption">Nebula galaxy by John Doe</figcaption>
                     </figure>
                   </div>
@@ -76,7 +76,7 @@
                       <div class="article-content">
                         <a href="article-page.html">
                           <div class="article-img">
-                            <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                            <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post Name">
                           </div>
                           <div class="article-text">
                             <p>Catagory | 00-00-0000</p>
@@ -89,7 +89,7 @@
                       <div class="article-content">
                         <a href="article-page.html">
                           <div class="article-img">
-                            <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                            <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post Name">
                           </div>
                           <div class="article-text">
                             <p>Catagory | 00-00-0000</p>
@@ -102,7 +102,7 @@
                       <div class="article-content">
                         <a href="article-page.html">
                           <div class="article-img">
-                            <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                            <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post Name">
                           </div>
                           <div class="article-text">
                             <p>Catagory | 00-00-0000</p>
@@ -146,6 +146,6 @@
       </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
