--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
     <title>Space Blog | Blog</title>
 </head>
 <body>
@@ -51,7 +51,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -65,7 +65,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -79,7 +79,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -93,7 +93,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -107,7 +107,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -121,7 +121,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -135,7 +135,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -149,7 +149,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -163,7 +163,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -177,7 +177,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -191,7 +191,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -205,7 +205,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -219,7 +219,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -233,7 +233,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -247,7 +247,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -261,7 +261,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -275,7 +275,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -289,7 +289,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -303,7 +303,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -317,7 +317,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -331,7 +331,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -345,7 +345,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -359,7 +359,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -373,7 +373,7 @@
                   <div class="article-content">
                     <a href="article-page.html">
                       <div class="article-img">
-                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="">
+                        <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post name">
                       </div>
                       <div class="article-text">
                         <h3>This is where the title will go</h3>
@@ -435,6 +435,6 @@
       </div>
   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
 </body>
 </html>
